Close screen layout notification after clicked.

Previously, when the screen layout notification was clicked, settings
was opened, but the notification is still seen.

However, the notification should be closed just after clicked.

BUG=816414
TEST=ash_unittests

Change-Id: I853515e6131d7377f94d5d4cbf120f0fd95d0c3c
Reviewed-on: https://chromium-review.googlesource.com/938804
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Megumi Hattori <megumihattori@google.com>
Cr-Commit-Position: refs/heads/master@{#540452}