ash/system/screen_layout_observer_unittest.cc
@@ -52,6 +52,7 @@ class ScreenLayoutObserverTest : public AshTestBase {
   void CheckUpdate();
 
   void CloseNotification();
+  void ClickNotification();
   base::string16 GetDisplayNotificationText() const;
   base::string16 GetDisplayNotificationAdditionalText() const;
 
@@ -81,6 +82,11 @@ void ScreenLayoutObserverTest::CloseNotification() {
   message_center::MessageCenter::Get()->RemoveNotification(
       ScreenLayoutObserver::kNotificationId, false);
   RunAllPendingInMessageLoop();
+}
+
+void ScreenLayoutObserverTest::ClickNotification() {
+  const message_center::Notification* notification = GetDisplayNotification();
+  notification->Click();
 }
 
 base::string16 ScreenLayoutObserverTest::GetDisplayNotificationText() const {
@@ -705,6 +711,19 @@ TEST_F(ScreenLayoutObserverTest, MirrorModeAddOrRemoveDisplayMessage) {
   display_manager()->OnNativeDisplaysChanged(display_info_list);
   EXPECT_TRUE(GetDisplayNotificationText().empty());
   EXPECT_TRUE(display_manager()->IsInMirrorMode());
+}
+
+TEST_F(ScreenLayoutObserverTest, ClickNotification) {
+  Shell::Get()->screen_layout_observer()->set_show_notifications_for_testing(
+      true);
+
+  // Create notification.
+  UpdateDisplay("400x400/r");
+  EXPECT_FALSE(GetDisplayNotificationAdditionalText().empty());
+
+  // Click notification.
+  ClickNotification();
+  EXPECT_TRUE(GetDisplayNotificationAdditionalText().empty());
 }
 
 }  // namespace ash
